# ros-triton-classifier

./: CMakeLists.txt  package.xml  setup.py
msg/: ObjectHypothesisWithClassName.msg
src/: classifier_node.py  triton_api.py
triton/: Dockerfile.jetson
